<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_controller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_speaker"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/speaker_icon_svg"
        android:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_speaker"
        app:layout_constraintTop_toBottomOf="@+id/iv_controller" />

    <TextView
        android:id="@+id/tv_des_speaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#CCFFFFFF"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/iv_speaker"
        app:layout_constraintEnd_toEndOf="@+id/tv_speaker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tv_speaker"
        app:layout_constraintTop_toBottomOf="@+id/tv_speaker"
        tools:text="@string/speaker_description" />

    <TextView
        android:id="@+id/tv_speaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speaker"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_des_speaker"
        app:layout_constraintEnd_toStartOf="@+id/iv_speaker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_speaker" />

    <TextView
        android:id="@+id/tv_des_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/controller_description"
        android:textColor="#CCFFFFFF"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/iv_controller"
        app:layout_constraintEnd_toEndOf="@+id/tv_controller"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tv_controller"
        app:layout_constraintTop_toBottomOf="@+id/tv_controller" />

    <TextView
        android:id="@+id/tv_controller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/controller"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_des_cont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_controller"
        app:layout_constraintTop_toTopOf="@+id/iv_controller" />

    <ImageView
        android:id="@+id/iv_controller"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="multiply"
        android:foregroundTint="#FFFFFF"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/iv_speaker"
        app:layout_constraintEnd_toStartOf="@+id/tv_controller"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/remote" />

</androidx.constraintlayout.widget.ConstraintLayout>